--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-This contains tile management logic (`Layout` in `src/lib.rs`) that one could use as the starting point for creating a tiling window manager, or for adding tiling window functionality to other programs (similar to vim).
+Partially working tiling WM in scheme/rust.
 
-It is not a functioning window manager now.
+Under active development and not really usable yet.
